# Ark

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Code/: CMakeLists.txt
Code/CMake/: Ark.cmake  ArkConfig.cmake.in  ArkVersion.hpp.in  External.cmake  Options.cmake
Code/Examples/: CMakeLists.txt
Code/Examples/Arena/: Main.cpp
Code/Examples/Assert/: Assert.cpp
Code/Examples/Clipboard/: Main.cpp
Code/Examples/CpuInfo/: Main.cpp
Code/Examples/Cube/: Main.cpp
Code/Examples/Display/: Display.cmake  Main.cpp
Code/Examples/Events/: Events.cmake  Main.cpp
Code/Examples/FileDialog/: Main.cpp
Code/Examples/IniDocument/: IniDocument.cmake  Main.cpp
Code/Examples/Logging/: Logging.cmake  Main.cpp
Code/Examples/LoggingCategories/: Main.cpp
Code/Examples/Main/: Main.cmake  Main.cpp
Code/Examples/Math/: Main.cpp  Math.cmake
Code/Examples/Memory/: Main.cpp  Memory.cmake
Code/Examples/MessageBox/: Main.cpp
Code/Examples/Noise/: Main.cpp  Noise.cmake
Code/Examples/Path/: Main.cpp  Path.cmake
Code/Examples/Stacktrace/: Main.cpp  Stacktrace.cmake
Code/Examples/Storage/: Main.cpp  Storage.cmake
Code/Examples/SystemConsole/: Main.cpp
Code/Examples/SystemInfo/: Main.cpp
Code/Examples/Timer/: Main.cpp  Timer.cmake
Code/Examples/VirtualFileSystem/: Main.cpp  VirtualFileSystem.cmake
Code/Examples/Window/: Main.cpp  Window.cmake
Code/Sources/: Application.cmake  CMakeLists.txt  Collections.cmake  Compression.cmake  Concurrency.cmake  Core.cmake  Cryptography.cmake  Display.cmake  Documents.cmake  Imaging.cmake  Logging.cmake  Math.cmake  Memory.cmake  Storage.cmake  Strings.cmake  System.cmake
Code/Sources/Ark/Application/: Application.cpp  Application.hpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventLoop.cpp  EventLoop.hpp  EventSource.cpp  EventSource.hpp
Code/Sources/Ark/Collections/: Algorithms.hpp  Array.hpp  ArrayPolicy.hpp  BitSet.hpp  CircularBuffer.hpp  Collections.cpp  Collections.hpp  Deque.hpp  HashMap.hpp  HashSet.hpp  InlineArray.hpp  InlineSlice.hpp  LinkedList.hpp  LruCache.hpp  OrderedMap.hpp  OrderedSet.hpp  Queue.hpp  RandomUtilities.hpp  SinglyLinkedList.hpp  Slice.hpp  StableArray.hpp  Stack.hpp  Types.hpp
Code/Sources/Ark/Compression/: Bzip2.cpp  Bzip2.hpp  Deflate.cpp  Deflate.hpp  Gzip.cpp  Gzip.hpp
Code/Sources/Ark/Concurrency/: Atomic.hpp  Concurrency.hpp  ConditionVariable.hpp  Locks.hpp  Mutex.hpp  ScopedLock.hpp  Semaphore.hpp  SpinLock.hpp  Thread.hpp  ThreadLocal.hpp  ThreadPool.cpp  ThreadPool.hpp  Types.hpp
Code/Sources/Ark/Core/: Byte.hpp  ByteOrder.hpp  Comparison.hpp  Concepts.hpp  Configuration.hpp  Core.hpp  DateTime.cpp  DateTime.hpp  Defer.hpp  Duration.hpp  Flags.hpp  Function.hpp  Functions.hpp  Hasher.hpp  Macros.hpp  Monostate.hpp  NumericLimits.hpp  Option.hpp  Pair.hpp  Platform.hpp  Range.hpp  Result.hpp  Time.hpp  Timer.hpp  Traits.hpp  Tuple.hpp  Types.hpp  Utilities.hpp  Variant.hpp
Code/Sources/Ark/Cryptography/: Crc32.cpp  Crc32.hpp  Md5.cpp  Md5.hpp  Sha1.cpp  Sha1.hpp
Code/Sources/Ark/Display/: Monitor.hpp  PixelFormat.hpp  Surface.hpp  Types.hpp  Window.cpp  Window.hpp
Code/Sources/Ark/Documents/: CsvDocument.cpp  (+19 more)
Code/Tests/: CMakeLists.txt
Code/Tests/Application/: EventDispatcher.cpp
Code/Tests/Collections/: Algorithms.cpp  BitSet.cpp  CircularBuffer.cpp  Collections.cpp  Deque.cpp  HashMap.cpp  HashSet.cpp  InlineArray.cpp  LinkedList.cpp  LruCache.cpp  OrderedMap.cpp  OrderedSet.cpp  Queue.cpp  SinglyLinkedList.cpp  StableArray.cpp  Stack.cpp
Code/Tests/Concurrency/: Concurrency.cpp  Primitives.cpp
Code/Tests/Core/: ByteOrder.cpp  Comparison.cpp  Defer.cpp  DurationTime.cpp  Function.cpp  Hasher.cpp  Option.cpp  Pair.cpp  Result.cpp  Tuple.cpp  Variant.cpp
Code/Tests/Display/: Types.cpp
Code/Tests/Documents/: CsvDocument.cpp  CsvReaderWriter.cpp  IniDocument.cpp  IniReaderWriter.cpp  JsonReaderWriter.cpp
Code/Tests/Logging/: Logging.cpp
Code/Tests/Math/: Angle.cpp  BoundingBox.cpp  Color.cpp  Color32.cpp  Color64.cpp  Functions.cpp  Line.cpp  Matrix3.cpp  Matrix4.cpp  PcgRandom.cpp  Plane.cpp  Polygon.cpp  Quaternion.cpp  Ray.cpp  Sphere.cpp  Vector2.cpp  Vector2Angle.cpp  Vector3.cpp  Vector4.cpp
Code/Tests/Memory/: Allocator.cpp  Arena.cpp  FrameAllocator.cpp  GrowingLinearAllocator.cpp  LinearArena.cpp  Memory.cpp  PageAllocator.cpp  PoolAllocator.cpp  RoutingAllocator.cpp  SmallObjectAllocator.cpp  SmartPointers.cpp  TrackingAllocator.cpp
Code/Tests/Storage/: File.cpp  FileSystem.cpp  MemoryStream.cpp  Path.cpp  VirtualFileSystem.cpp
Code/Tests/Strings/: AnsiConversions.cpp  AnsiStrings.cpp  Base64AndCp437.cpp  String.cpp  StringAllocators.cpp  StringSlice.cpp  Utf8AndJoin.cpp
Code/Tests/System/: Clipboard.cpp  TimerExample.cpp
(+320 files in other folders)
